# opengl

./: .gitignore  .gitmodules  CMakeLists.txt  frag.shader  run.sh  vert.shader
includes/: array_buffers.hpp  buffer.hpp  camera.hpp  cube.hpp  element_buffer.hpp  matrices.hpp  opengl.hpp  shader.hpp  texture.hpp  vector.hpp  vertex_array.hpp
includes/math/: matrices.hpp  vector.hpp
includes/model/: mesh.hpp  model.hpp
includes/objects/: camera.hpp  cube.hpp
includes/primitives/: array_buffers.hpp  element_buffer.hpp  shader.hpp  texture.hpp  vertex_array.hpp
libs/math/: CMakeLists.txt  matrices.cpp  vector.cpp
libs/model/: CMakeLists.txt  mesh.cpp  model.cpp
libs/objects/: CMakeLists.txt  camera.cpp  cube.cpp
libs/primitives/: CMakeLists.txt  array_buffers.cpp  buffer.cpp  element_buffer.cpp  shader.cpp  texture.cpp  vertex_array.cpp
shaders/base_material/: frag.shader  vert.shader
shaders/directional_light/: frag.shader  vert.shader
shaders/light_source/: frag.shader
shaders/point_light/: frag.shader
shaders/spot_light/: frag.shader
src/: main.cpp  stb_image.cpp
